优化部分细节

--- a/src/test/resources/database.properties
+++ b/src/test/resources/database.properties
@@ -2,3 +2,4 @@ database.uri=jdbc:h2:d:/LocalCloud/myh2.db
 database.name=lingkang
 database.password=123456
 database.dialect=com.maguasoft.jdbc.support.DefaultDialect
+database.entity-package=com.maguasoft.jdbc.support.entity
