--- a/src/test/resources/database.properties
+++ b/src/test/resources/database.properties
@@ -1,5 +1,11 @@
-database.uri=jdbc:h2:d:/LocalCloud/myh2.db
-database.name=lingkang
-database.password=123456
+# database.uri=jdbc:h2:d:/LocalCloud/ShardingSphere.db
+# database.name=test
+# database.password=123
+# database.dialect=com.maguasoft.jdbc.support.DefaultDialect
+# database.entity-package=com.maguasoft.jdbc.support.entity
+
+database.uri=jdbc:sqlite:d:/LocalCloud/ShardingSphere.db
+database.name=test
+database.password=123
 database.dialect=com.maguasoft.jdbc.support.DefaultDialect
 database.entity-package=com.maguasoft.jdbc.support.entity
