--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,20 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.maguasoft</groupId>
-  <artifactId>simple-orm</artifactId>
+  <artifactId>rookie</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>pom</packaging>
+  <name>rookie</name>
 
-  <name>simple-orm</name>
   <url>http://maven.apache.org</url>
+
+  <modules>
+    <module>rookie-ioc</module>
+    <module>rookie-mvc</module>
+    <module>rookie-aop</module>
+    <module>rookie-orm</module>
+    <module>rookie-utils</module>
+  </modules>
 
   <properties>
     <java.version>1.8</java.version>
@@ -18,28 +26,33 @@
     <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <!-- dependency.version -->
+    <junit.version>4.13.2</junit.version>
+    <sqlite.jdbc.version>3.43.0.0</sqlite.jdbc.version>
   </properties>
 
-  <dependencies>
+  <dependencyManagement>
 <!--    <dependency>-->
 <!--      <groupId>com.h2database</groupId>-->
 <!--      <artifactId>h2</artifactId>-->
 <!--      <version>2.2.220</version>-->
 <!--      <scope>test</scope>-->
 <!--    </dependency>-->
-    <dependency>
-      <groupId>org.xerial</groupId>
-      <artifactId>sqlite-jdbc</artifactId>
-      <version>3.43.0.0</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.13.2</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+    <dependencies>
+      <dependency>
+        <groupId>org.xerial</groupId>
+        <artifactId>sqlite-jdbc</artifactId>
+        <version>${sqlite.jdbc.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>${junit.version}</version>
+        <scope>test</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <build>
     <plugins>
@@ -49,7 +62,6 @@
         <configuration>
           <source>8</source>
           <target>8</target>
-          <encoding>UTF-8</encoding>
         </configuration>
       </plugin>
     </plugins>
