--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,12 @@
     <!-- dependency.version -->
     <junit.version>4.13.2</junit.version>
     <sqlite.jdbc.version>3.43.0.0</sqlite.jdbc.version>
+    <slf4j.api.version>2.0.9</slf4j.api.version>
+    <slf4j.jcl.version>2.0.9</slf4j.jcl.version>
+    <log4j12.version>2.0.9</log4j12.version>
+    <log4j.api.version>2.20.0</log4j.api.version>
+    <log4j.core.version>2.20.0</log4j.core.version>
+    <log4j.slf4j2.version>2.20.0</log4j.slf4j2.version>
   </properties>
 
   <dependencyManagement>
@@ -39,6 +45,19 @@
 <!--      <scope>test</scope>-->
 <!--    </dependency>-->
     <dependencies>
+      <!-- SLF4J -->
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>${slf4j.api.version}</version>
+      </dependency>
+      <!-- log4j2 -->
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-slf4j2-impl</artifactId>
+        <version>${log4j.slf4j2.version}</version>
+      </dependency>
+      <!-- sqlite -->
       <dependency>
         <groupId>org.xerial</groupId>
         <artifactId>sqlite-jdbc</artifactId>
