--- a/rookie-orm/pom.xml
+++ b/rookie-orm/pom.xml
@@ -24,6 +24,17 @@
             <artifactId>rookie-utils</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!--SLF4J -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <!--log4j2 -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j2-impl</artifactId>
+        </dependency>
+        <!--sqlite -->
         <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
