--- a/magua-commons/src/test/resources/test.properties
+++ b/magua-commons/src/test/resources/test.properties
@@ -1,5 +1,5 @@
 database.uri=jdbc:sqlite:d:/LocalCloud/ShardingSphere.db
 database.name=test
 database.password=123
-database.dialect=com.maguasoft.jdbc.support.DefaultDialect
+database.dialect=support.com.maguasoft.magua.orm.DefaultDialect
 database.entity-package=com.maguasoft.jdbc.support.entity
