--- a/magua-demo/src/main/resources/database.properties
+++ b/magua-demo/src/main/resources/database.properties
@@ -1,5 +1,5 @@
 database.uri=jdbc:sqlite:d:/LocalCloud/ShardingSphere.db
 database.name=test
 database.password=123
-database.dialect=com.maguasoft.jdbc.support.DefaultDialect
-database.entity-package=com.maguasoft.orm.entity
+database.dialect=com.maguasoft.magua.orm.support.DefaultDialect
+database.entity-package=com.maguasoft.magua.orm.entity
