--- a/magua-orm/src/test/resources/database.properties
+++ b/magua-orm/src/test/resources/database.properties
@@ -1,11 +1,11 @@
 # database.uri=jdbc:h2:d:/LocalCloud/ShardingSphere.db
 # database.name=test
 # database.password=123
-# database.dialect=com.maguasoft.jdbc.support.DefaultDialect
+# database.dialect=support.com.maguasoft.magua.orm.DefaultDialect
 # database.entity-package=com.maguasoft.jdbc.support.entity
 
 database.uri=jdbc:sqlite:d:/LocalCloud/ShardingSphere.db
 database.name=test
 database.password=123
-database.dialect=com.maguasoft.jdbc.support.DefaultDialect
-database.entity-package=com.maguasoft.jdbc.support.entity
+database.dialect=com.maguasoft.magua.orm.support.DefaultDialect
+database.entity-package=com.maguasoft.magua.orm.support.entity
